<resources>
    <string name="app_name">Intellihaling</string>

    <string name="title_activity_login">Log in</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <!-- Strings related to login -->

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_confirmPwd">Password is not the same</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_auth_failed">Failed to Authenticate</string>
    <string name="error_auth_success">Authentication Success</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="fragment_ins_main">Fragment Instruction Main</string>
    <string name="fragment_ins_guide">Fragment Instruction Guide</string>
    <string name="fragment_ins_pass">Fragment Instruction Pass</string>
    <string name="fragment_ins_fail">Fragment Instruction Fail</string>

    <string name="instruction_not_feeling">Not Feeling Well?</string>
    <string name="instruction_blow">Blow into your peakflow/ spirometer 3x\nEnter the reading below</string>
    <string name="instruction_you_are_fine">You Are Breathing Well!</string>
    <string name="instruction_do_not_need">You do not need the inhaler!</string>
    <string name="instruction_might_have">Breathing difficult?\nYou have asthma symptom</string>
    <string name="instruction_severe_difficult">Breathing severely difficult?\nYou have Asthma Symptoms!</string>
    <string name="instruction_take_medicine">Please inhale 2 puffs and wait 1 min</string>
    <string name="instruction_feeling_difficulty">Are you having difficulty breathing?</string>
    <string name="instruction_need_inhaler">Let\'s check to see if you need an inhaler</string>
    <string name="instruction_enter_pek">Peakflow Reading</string>
    <string name="instruction_enter_fev">FEV1 Reading</string>
    <string name="instruction_emergency_1">Your Asthma is not better after 10 puffs of the inhaler!</string>
    <string name="instruction_emergency_2">Don\'t Worry\n Emergency services are on their way!</string>
    <string name="instruction_exceed_10">If you still feel uncomfortable after 10 puffs, you need to go to hospital.</string>

    <string name="reminder_inhaler_puff">Less than 20 puffs left in your inhaler, remember to get a new one soon!</string>
    <string name="reminder_inhaler_day">Inhaler will expired in 5 days! remember to get a new one soon!</string>
    <string name="reminder_feel_short">Your child is feeling shortness of breath now!</string>
    <string name="reminder_take_puff">Your child is taking 2 puffs from inhaler now!</string>
    <string name="reminder_no_asthma">Your child don\'t have any asthma symptom now.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_heat_rate_detect">HeatRateDetect</string>
</resources>
