<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:id="@+id/instruction_guide_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Showing Time"
                android:textSize="25sp"
                android:gravity="center"
                android:textAlignment="center">
            </TextView>

            <TextView
                android:id="@+id/instruction_guide_text_msg_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/instruction_feeling_difficulty"
                android:textSize="20sp"
                android:gravity="center"
                android:textAlignment="center">
            </TextView>
            <TextView
                android:id="@+id/instruction_guide_text_msg_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/instruction_need_inhaler"
                android:textSize="20sp"
                android:gravity="center"
                android:textAlignment="center">
            </TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/instruction_guide_img_1"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:src="@mipmap/img_blow"
                    android:layout_alignParentLeft="true"/>

                <ImageView
                    android:id="@+id/instuction_guide_img_2"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/img_4"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/instruction_guide_text_blow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/instruction_blow"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="20dp">
            </TextView>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp">

                <EditText android:id="@+id/instruction_guide_pfnum_enter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:hint="@string/instruction_enter_pek"
                    android:text="140"
                    android:textSize="25sp"
                    android:textAlignment="center"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp">

                <EditText android:id="@+id/instruction_guide_fevnum_enter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:hint="@string/instruction_enter_fev"
                    android:text="40"
                    android:textSize="25sp"
                    android:textAlignment="center"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_instruction_guide_enter_done"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/circle"
                android:text="Done"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:textColor="#fff" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>