<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:id="@+id/instruction_yellow_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Showing Time"
                android:textSize="25sp"
                android:gravity="center"
                android:textAlignment="center">
            </TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/instruction_yellow_img_1"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@mipmap/img_light"
                    android:layout_alignParentLeft="true"/>

                <ImageView
                    android:id="@+id/instuction_yellow_img_2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignRight="@+id/instruction_pass_img_1"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/img_mild"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/instruction_yellow_text_fail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/instruction_might_have"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_marginTop="10dp">
            </TextView>

            <TextView
                android:id="@+id/instruction_yellow_text_count_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="#Meow"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginTop="10dp">
            </TextView>

            <TextView
                android:id="@+id/instruction_yellow_text_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/instruction_take_medicine"
                android:textSize="28sp"
                android:textAlignment="center"
                android:layout_marginTop="10dp">
            </TextView>

            <TextView
                android:id="@+id/instruction_yellow_text_msg_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/instruction_exceed_10"
                android:textSize="10sp"
                android:textAlignment="center"
                android:layout_marginTop="10dp">
            </TextView>

            <Button
                android:id="@+id/btn_instruction_yellow_time_count"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/circle"
                android:text="Click to Start Counting"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="#ffff" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>